--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.6.0"
+    "mongodb": "^4.6.0",
+    "y": "^0.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.20"
   }
 }
